[package]
name = "mjolnir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.5.0"
rand = "0.8.5"
openssl = "0.10.38"
hex = "0.4.3"
owo-colors = "3.2.0"
regex = "1"
time = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
sha2 = "0.10.2"
hex-literal = "0.3.4"
base64-stream = "1.2.7"